--- a/public/css/style.css
+++ b/public/css/style.css
@@ -208,7 +208,7 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/bg2.jpg) center center no-repeat;
+  background: url(../img/bhihi.jpg) center center no-repeat;
   /* background-color: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%); */
   -webkit-background-size: cover;
   -moz-background-size: cover;
