--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -132,3 +132,39 @@
     width: 110%;
   }
 }
+
+
+.button {
+  background-color: red;
+  -webkit-border-radius: 60px;
+  border-radius: 60px;
+  border: none;
+  color: #eeeeee;
+  cursor: pointer;
+  display: inline-block;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+}
+.button:hover{
+  color:white
+}
+@keyframes glowing {
+  0% {
+    background-color: #bb1010;
+    box-shadow: 0 0 5px #bb1010;
+  }
+  50% {
+    background-color: #da2828;
+    box-shadow: 0 0 20px #da2828;
+  }
+  100% {
+    background-color: #bb1010;
+    box-shadow: 0 0 5px #bb1010;
+  }
+}
+.button {
+  animation: glowing 1300ms infinite;
+}
